Resize featured records to avoid text clipping.
(#73)

--- a/scss/_omeka.scss
+++ b/scss/_omeka.scss
@@ -1437,7 +1437,6 @@ button.list:before {
 
 .featured-records {
   @include xy-grid;
-  align-items: center;
   margin: 0 #{-.5 * $global-margin};
   
   .featured {
@@ -1445,23 +1444,21 @@ button.list:before {
   }
 
   .featured .label {
-    margin: 0 0 $global-margin (-.3125 * $global-margin);
     width: min-content;
+    height: min-content;
   }
 
   .record {
-    display: flex;
-    flex-wrap: wrap;
-    align-content: space-between;
+    display: grid;
     position: relative;
     margin-bottom: $global-margin;
     width: 100%;
     min-height: 10 * $global-padding;
-    z-index: 0;
-    padding: $global-padding;
     overflow: hidden;
-    flex-direction: column;
     justify-content: space-between;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
   }
 
   .empty.record {
@@ -1470,37 +1467,48 @@ button.list:before {
 
   img {
     width: 100%;
-    position: absolute;
+    position: relative;
+    grid-area: 1 / 1;
     z-index: -1;
-    left: 0;
-    top: 0;
+  }
+
+  .record-meta {
+    grid-area: 1 / 1;
+    z-index: 2;
+    align-self: flex-end;
+    margin: $global-margin;
   }
 }
 
 @include breakpoint(medium up) {
+  .featured-records .featured {
+    align-items: stretch;
+  }
+
   .featured-records .main.featured {
     @include xy-cell(8, null, $global-margin);
+
+    .record {
+      height: 100%;
+      margin-bottom: 0;
+    }
   }
   
   .featured-records .supporting.featured {
     @include xy-cell(4, null, $global-margin);
-  }  
-
-  .featured-records .record {
-    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
   }
 
-  .featured-records .label {
-    position: absolute;
-    top: $global-margin;
-    left: $global-margin;
-    max-width: calc(100% - #{2 * $global-margin});
+  .featured-records .record {
+    margin-bottom: 0;
+  }
+
+  .featured-records .supporting.featured .record:first-child {
+    margin-bottom: $global-margin;
   }
 
   .featured-records h2 {
-    position: absolute;
-    bottom: $global-margin;
-    left: $global-margin;
     width: calc(100% - #{2 * $global-margin});
     font-size: 1.25 * $global-font-size;
   }
@@ -1517,8 +1525,8 @@ button.list:before {
       color: #fff;
       background-color: $primary-color;
       display: inline;
-      box-shadow: 6px 0 0 $primary-color, -6px 0 0 $primary-color;
       box-decoration-break: clone;
+      padding: 0 6px;
     }
 }
 
